force-app/main/default/objects/Contact/fields/Board_of_Directors__c.field-meta.xml
<CustomField>
    <fullName>Board_of_Directors__c</fullName>
    <defaultValue>$Profile.Id</defaultValue>
    <description>Diretoria do Contato</description>
    <label>Board of Directors</label>
    <length>200</length>
    <type>Text</type>
</CustomField>