force-app/main/default/objects/Contact/fields/Patent__c.field-meta.xml
<CustomField>
    <fullName>Patent__c</fullName>
    <label>Patent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>