force-app/main/default/objects/Contact/fields/Professional_Position__c.field-meta.xml
<CustomField>
    <fullName>Professional_Position__c</fullName>
    <description>Cargo ou Posição</description>
    <inlineHelpText>Cargo ou Posição</inlineHelpText>
    <label>Professional Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>