force-app/main/default/objects/Contact/fields/Surname_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Surname_Acronym__c</fullName>
    <description>Apelido / Acrônimo</description>
    <inlineHelpText>Apelido / Acrônimo</inlineHelpText>
    <label>Surname/Acronym</label>
    <length>200</length>
    <type>Text</type>
</CustomField>